--- a/index.html
+++ b/index.html
@@ -56,14 +56,21 @@
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="assets/img/1 (1).jpg" class="d-block w-100 h-20" alt="..." >
+              <div class="carousel-item d-block w-100 h-20 active" style="background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('assets/img/4.png') no-repeat; background-size: cover;">
+                <div class="content">
+                  <h1>Learn to Grow Together As a Team</h1>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                  <div class="cta">
+                    <a href="#" class="btn btn-success">Learn More</a>
+                    <a href="#" class="btn btn-outline-success">See More</a>
+                  </div>
+                </div>
               </div>
               <div class="carousel-item">
-                <img src="assets/img/1 (2).jpg" class="d-block w-100 h-20" alt="...">
+                <img src="assets/img/4.png" class="d-block w-100 h-20" alt="...">
               </div>
               <div class="carousel-item"> 
-                <img src="assets/img/1 (1).jpg" class="d-block w-100 h-20" alt="...">
+                <img src="assets/img/6.png" class="d-block w-100 h-20" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
