--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link " aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Matches</a>
@@ -47,10 +47,10 @@
                     </ul>
                   </li> -->
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link active" href="contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -66,7 +66,11 @@
     <section class="contact">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-md-6 offset-md-3 mb-5">
+                    <div class="mb-5 text-center mt-5">
+                        <h1 class="section-title">Our Key Player</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium, mollitia.</p>
+                        </div>
                     <form action="" method="get">
                         <div class="form-floating mb-3">
                             <input type="name" class="form-control" id="floatingInput" placeholder="Your Name">
@@ -80,7 +84,7 @@
                             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
                             <label for="floatingTextarea2">Message</label>
                           </div>
-                          <button type="submit" class="btn btn-primary">Sign in</button>
+                          <button type="submit" class="btn primary-btn mt-2">Send</button>
                           
                     </form>
                 </div>
