--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="contact.html">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -61,23 +61,19 @@
             <div class="row">
                 <div class="col-md-6 offset-md-3 mb-5">
                     <div class="mb-5 text-center mt-5">
-                        <h1 class="section-title">Contact Us</h1>
+                        <h1 class="section-title">Login</h1>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium, mollitia.</p>
                         </div>
                     <form action="" method="get">
                         <div class="form-floating mb-3">
-                            <input type="name" class="form-control" id="floatingInput" placeholder="Your Name">
-                            <label for="floatingInput">Name</label>
+                            <input type="text" class="form-control" id="floatingInput" placeholder="Username">
+                            <label for="floatingInput">Username</label>
                           </div>
                         <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                            <label for="floatingInput">Email</label>
+                            <input type="password" class="form-control" id="floatingInput" placeholder="Password">
+                            <label for="floatingInput">Password</label>
                           </div>
-                          <div class="form-floating">
-                            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-                            <label for="floatingTextarea2">Message</label>
-                          </div>
-                          <button type="submit" class="btn primary-btn mt-2">Send</button>
+                          <button type="submit" class="btn primary-btn mt-2">Login</button>
                           
                     </form>
                 </div>
